# finshield

./: .env.example  .gitignore  DEPLOY_RENDER.md  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  sample_cases_enhanced.json
config/: prometheus.yml
docs/: app.js  index.html  styles.css
finshield/: __init__.py  cli.py
finshield/agents/: __init__.py  base.py  orchestrator.py  prompts.py  specialized.py
finshield/api/: __init__.py  app.py  routes.py
finshield/core/: __init__.py  config.py  logging.py
finshield/models/: __init__.py  database.py  schemas.py
finshield/services/: __init__.py  analysis.py  case_management.py
frontend/: app.js
migrations/: env.py
migrations/versions/: .gitkeep  001_initial_schema.py
scripts/: init-db.sql
tests/: __init__.py  conftest.py  test_agents.py  test_api.py
