[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finshield"
version = "1.0.0"
description = "FinShield - Enterprise-Grade Financial Crime Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kunal Shaw", email = "kunalshawkol16@gmail.com"}
]
maintainers = [
    {name = "Kunal Shaw", email = "kunalshawkol16@gmail.com"}
]
keywords = [
    "aml",
    "anti-money-laundering",
    "financial-crime",
    "compliance",
    "langgraph",
    "llm",
    "ai",
    "fraud-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core LangChain/LangGraph
    "langgraph>=0.3.20",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.3.0",
    
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    
    # Monitoring
    "prometheus-client>=0.21.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

huggingface = [
    "langchain-huggingface>=0.1.0",
    "huggingface-hub>=0.26.0",
    "transformers>=4.46.0",
]

graph = [
    "neo4j>=5.26.0",
    "networkx>=3.4.0",
]

ml = [
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

all = [
    "finshield[dev,huggingface,graph,ml]",
]

[project.scripts]
finshield = "finshield.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/finshield"
Documentation = "https://finshield.readthedocs.io"
Repository = "https://github.com/yourusername/finshield"
Issues = "https://github.com/yourusername/finshield/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["finshield*"]

[tool.setuptools.package-data]
finshield = ["py.typed"]

# ===========================================
# Tool Configuration
# ===========================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["finshield"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["finshield"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
